@@ -1,6 +1,8 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Checks]
+ - gitignore: Make sure all important paths that are expected to be top-level paths match only top level paths.
 
 0.005000 2015-07-06T08:09:15Z b2c79f6
  [Checks]
